--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,27 @@
-name: Ruby
+name: Gotsha
 
 on:
-  push:
-    branches:
-      - master
-
   pull_request:
 
 jobs:
-  build:
+  verify:
     runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby }}
-    strategy:
-      matrix:
-        ruby:
-          - '3.4.5'
-
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
-      - name: Run the default task
-        run: bundle exec rake
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Fetch gotsha notes
+        run: git fetch origin 'refs/notes/gotsha:refs/notes/gotsha'
+
+      - name: Verify gotsha note
+        run: |
+          SHA="${{ github.event.pull_request.head.sha }}"
+          NOTE="$(git notes --ref=gotsha show "$SHA" 2>/dev/null || true)"
+          if [ "$NOTE" = "ok" ]; then
+            echo "✓ gotsha verified for $SHA"
+          else
+            echo "::error ::Missing gotsha note for $SHA"
+            exit 1
+          fi
