More error-prone version

--- a/lib/gotsha/templates/config.yml
+++ b/lib/gotsha/templates/config.yml
@@ -12,7 +12,8 @@ pre_push_tests: true
 # commands:
 # - bundle exec rubocop
 # - bundle exec rspec
+# - rubocop && rspec
 # ```
 commands:
- - bundle exec rspec
+ - bundle exec rspec --format progress
 
