Replace Git config changes by hooks (#12)
Fixes #9 and #8

--- a/.gotsha/github_action_example.yml
+++ b/.gotsha/github_action_example.yml
@@ -1,5 +1,4 @@
-# If you want to create Github Action, copy this file into .gihtub folder
-# For example to: .github/workflows/main.yml
+# Can be stored at .github/workflows/main.yml
 name: Gotsha
 
 on:
