--- a/lib/gotsha/templates/config.yml
+++ b/lib/gotsha/templates/config.yml
@@ -10,3 +10,5 @@ commands:
 #  - rubocop && rails t
 #  - docker exec great-app rspec
 
+# Print out more details (Bash commands output, etc.)
+verbose: false
