--- a/.gotsha/config.yml
+++ b/.gotsha/config.yml
@@ -3,7 +3,7 @@
 # Git hooks config
 post_commit_tests: true
 pre_push_tests: true
-interrupt_push_on_tests_failure: false
+interrupt_push_on_tests_failure: true
 
 # Your test commands to run
 commands:
